Thu Apr  1 15:20:09 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Explicitly search the environment PATH variable for the
          repository and test commands to execute.

Wed Mar 31 23:59:23 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * bin/performance_tests.lst:
        * performance-tests/Bench/bin/extract-latency.pl:
        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/bin/plot-throughput.gp:
        * performance-tests/Bench/bin/reduce-latency-data.pl:
        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/latency/test_list.txt:
        * performance-tests/Bench/tests/thru/test-commands.txt:
        * performance-tests/Bench/tools/convert-all:
        * performance-tests/Bench/tools/convert-latency:
        * performance-tests/Bench/tools/plot-latency.gp:
        * performance-tests/Bench/tools/plot-throughput.gp:
        * performance-tests/Bench/bin/reduce.pl:
        * performance-tests/Bench/bin/extract.pl:
        * performance-tests/Bench/tools/plot-all.gp:

          Added initial scripts for plotting throughput data and renamed
          the genericly name latency scripts.

Wed Mar 31 19:51:26 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Prepend the script directory to the command search path and
          then use that path to find commands.  This allows installations
          other than the 'mkpkg' ones to work as well.

Wed Mar 31 19:02:50 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Previous debug file specification change is now extended to the
          testprocess commands as well.

        * performance-tests/Bench/doc/userguide.html:
        * performance-tests/Bench/tests/latency/latency.mm:

          Adding and updating documentation.
