@@ -14,37 +14,31 @@ use lib "$ACE_ROOT/bin";
 use PerlDDS::Run_Test;
 use PerlDDS::Cross_Sync;
 
+
+sub configure_transport_file {
+  my $currfile = shift;
+  my $myhostname = shift;
+  my $newfile = $currfile . ".configured";
+  open(NEWCONFIGFILE, "$newfile") and close (NEWCONFIGFILE) && return $newfile;
+  open(CONFIGFILE, "$currfile") or die "Failed to open the transport file $currfile\n";
+  open(NEWCONFIGFILE, ">$newfile") or die "Failed to open the transport file $newfile for modification\n";
+
+  while (<CONFIGFILE>) {
+    s/\<%HOSTNAME%\>/$myhostname/g;
+    print <NEWCONFIGFILE> $_;
+  }
+  close NEWCONFIGFILE;
+  close CONFIGFILE;
+  return $newfile;
+}
+
+
 $| = 1;
 my $status = 0;
 my $bench_location = "$ENV{DDS_ROOT}/performance-tests/Bench";
 my $trans_config_file = "$bench_location/etc/transport-tcp.ini";
 my $pub_config_file = "$bench_location/tests/latency/p1-50.ini";
 my $sub_config_file = "$bench_location/tests/latency/p2.ini";
-
-
-if ($ARGV[0] eq 'udp') {
-    $trans_config_file = "$bench_location/etc/transport-udp.ini ";
-    mkdir "udp", 0777 unless -d "udp";
-    chdir "udp";
-}
-elsif ($ARGV[0] eq 'multibe') {
-    $trans_config_file = "$bench_location/etc/transport-multi-be.ini ";
-    mkdir "multibe", 0777 unless -d "multibe";
-    chdir "multibe";
-}
-elsif ($ARGV[0] eq 'multire') {
-    $trans_config_file = "$bench_location/etc/transport-multi-rel.ini ";
-    mkdir "multire", 0777 unless -d "multire";
-    chdir "multire";
-}
-elsif ($ARGV[0] eq 'tcp') {
-    mkdir "tcp", 0777 unless -d "tcp";
-    chdir "tcp";
-}
-else {
-    print "Unknown transport. Skipping...\n";
-    exit 0;
-}
 
 
 if ($ARGV[1] == 100) {
@@ -83,6 +77,30 @@ if (!$CS) {
     exit 0;
 }
 
+if ($ARGV[0] eq 'udp') {
+    $trans_config_file = configure_transport_file ("$bench_location/etc/transport-udp.ini", $CS->self());
+    mkdir "udp", 0777 unless -d "udp";
+    chdir "udp";
+}
+elsif ($ARGV[0] eq 'multibe') {
+    $trans_config_file = "$bench_location/etc/transport-multi-be.ini ";
+    mkdir "multibe", 0777 unless -d "multibe";
+    chdir "multibe";
+}
+elsif ($ARGV[0] eq 'multire') {
+    $trans_config_file = "$bench_location/etc/transport-multi-rel.ini ";
+    mkdir "multire", 0777 unless -d "multire";
+    chdir "multire";
+}
+elsif ($ARGV[0] eq 'tcp') {
+    mkdir "tcp", 0777 unless -d "tcp";
+    chdir "tcp";
+}
+else {
+    print "Unknown transport. Skipping...\n";
+    exit 0;
+}
+
 @test_configs = $CS->get_config_info();
 $pub_config_file = @test_configs[0];
 $sub_config_file = @test_configs[1];
@@ -108,11 +126,9 @@ unlink $dcpsrepo_ior;
 
 if ($role == PerlDDS::Cross_Sync_Common::SERVER) {
     unlink $dcpsrepo_ior;
-TODO: change to use standard ir 
-DCPSInfoRepo -ORBSvcConf /tao_builds/fields_t/1.6a/DDS/build/gcc_d1o0/performance-tests/Bench/bin/../etc/svc.conf  -ORBListenEndpoints iiop://127.0.0.1:2809  -o /tao_builds/fields_t/1.6a/DDS/build/gcc_d1o0/performance-tests/Bench/tests/thru/tcp/repo.ior
     $DCPSREPO = PerlDDS::create_process
           ("$bench_location/bin/run_test",
-           "-S -h iiop://$repo_host:$port1");
+           "-S -t 180 -h iiop://$repo_host:$port1");
 
     print $DCPSREPO->CommandLine(). "\n";
     $DCPSREPO->Spawn ();
@@ -144,11 +160,13 @@ DCPSInfoRepo -ORBSvcConf /tao_builds/fields_t/1.6a/DDS/build/gcc_d1o0/performanc
         $status = 1;
     }
 
-    $ir = $DCPSREPO->TerminateWaitKill(5);
-    if ($ir != 0) {
-        print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
-        $status = 1;
-    }
+    $ir = $DCPSREPO->TerminateWaitKill(30);
+    ## Ignore the return value because the run_test does not cleanly
+    ## shutdown the repo when run with a duration.
+    #if ($ir != 0) {
+    #    print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
+    #    $status = 1;
+    #}
 } else {
     $Subscriber = PerlDDS::create_process
           ("$bench_location/bin/run_test",
@@ -169,6 +187,8 @@ if ($status == 0) {
 } else {
   print STDERR "test FAILED.\n";
 }
+
+
 
 exit $status;
 
