@@ -1,0 +1,4 @@
+# group		client	server
+
+  1		castor.ociweb.com	pollux.ociweb.com
+
