@@ -1,3 +1,13 @@
+Thu Apr 01 22:36:25 UTC 2010  Trevor Fields  <fields_t@ociweb.com>
+
+        * performance-tests/Bench/bin/extract-throughput.pl:
+        * performance-tests/Bench/tests/latency/run_test.pl:
+        * performance-tests/Bench/tests/thru/run_test.pl:
+        * performance-tests/Bench/tests/thru/test-commands.txt:
+        * performance-tests/Bench/tests/thru/test_list.txt:
+
+          Minor fixes to run tests and data extraction script.
+
 Thu Apr  1 15:20:09 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/Bench/bin/run_test:
